Use Seperate script for debian builds
Vendor dependencies upon build.
Introducing tools for PPA and debian building
Improve Documentation