@@ -1,3 +1,5 @@
 module github.com/pc-magas/mkdotenv
 
 go 1.23.0
+
+require github.com/spf13/pflag v1.0.7 // indirect
